2001-08-07  Derek Price  <dprice@collab.net>

	* build_src.com: Add annotate.c/annotate.obj,verify, correct zlib name.
	* patch.c: VMS time_t appears to be unsigned.   Add a cast when testing
	for (time_t)-1.
	* subr.c: #else,#endif for no symlinks should be moved.
	(Patch from Mike Marciniszyn <Mike.Marciniszyn@sanchez.com>.)

2001-08-06  Derek Price  <dprice@collab.net>

	* Makefile.in: Regenerated.

2001-08-01  Derek Price  <dprice@collab.net>

	* diff.c (diff): Send long option for side-by-side diffs to the server
	rather than '-y', for backwards compatibility with old servers.
	(Original patch from Peter Mathiasson <peter@mathiasson.nu>.)

2001-07-19  Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (cvswrappers_contents): Remove -t/-f since they're
	disabled in wrapper.c.

	* checkout.c (checkout): Don't complain about checking out into the
	repository when piping output.
	(Reported by der Mouse <mouse@Rodents.Montreal.QC.CA>.)
	* sanity.sh (checkout_repository): New tests for above.

2001-07-10  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (importc-7): Now works correctly in local mode.

	* commit.c (commit_dirleaveproc): We're still in the directory when
	this is called, so the first argument to Name_Repository needs to
	be NULL, not dir.
	* sanity.sh (rmadd): New tests for above.

	* commit.c (commit): Reword error messages for committing as root.

2001-07-08  Larry Jones  <larry.jones@sdrc.com>

	* rcs.c (RCS_checkout): Correct scanf format to allow for trailing
	NUL terminator.
	* update.c (special_file_mismatch): Ditto.
	(Reported by Pekka Savola <pekkas@netcore.fi>.)

2001-07-05  Larry Jones  <larry.jones@sdrc.com>

	* client.c, root.c: Fix -Wall warnings.

	* buffer.c: #include socket header to declare shutdown().

	* rcs.c (rcsbuf_open): Use getpagesize() instead of sysconf() for
	portability.
	(RCS_copydeltas, rcsbuf_fill): Fix -Wall warnings.

2001-07-04  Derek Price  <dprice@collab.net>
